Enhanced responsiveness of the hero section by adding a mobile banner image and adjusting styles for various screen sizes. Updated font sizes and padding for better mobile display.

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body {
 	font-optical-sizing: auto;
 	font-style: normal;
 	font-size: 20px;
+	@media(max-width:768px){
+		font-size: 18px;
+	}
 }
 
 a {
@@ -112,10 +115,12 @@ header {
 
 	@media (max-width: 768px) {
 		flex-direction:column;
-		align-items:center;
+		align-items:start;
 		nav {
 			margin-top:10px;
 			width:100%;
+			padding-left: 15px;
+			padding-right:15px;
 			ul {
 				display:none;
 				flex-direction:column;
@@ -250,10 +255,26 @@ h1 {
 		width: 100%;
 		height: auto;
 		overflow: hidden;
+		position: relative;
+
 		img {
 			width: 100%;
 			height: auto;
 			object-fit: cover;
+			display: block;
+		}
+
+		.mobile-banner {
+			display: none;
+		}
+
+		@media (max-width: 768px) {
+			.desktop-banner {
+				display: none;
+			}
+			.mobile-banner {
+				display: block;
+			}
 		}
 	}
 	.hero-blue {
@@ -275,14 +296,24 @@ h1 {
 			font-size: 2.4rem;
 			line-height: 1.2;
 			margin-bottom:20px;
+
+			@media (max-width:768px){
+				font-size: 1.6rem;
+			}
 		}
 		p.hero-subtopic{
 			font-size: 2.2rem;
 			font-weight:600;
 			margin-bottom:20px;
+			@media (max-width:768px){
+				font-size: 1.2rem;
+			}
 		}
 		p.hero-desc{
 			padding:22px 0;
+			@media (max-width:768px){
+				padding:10px 0;
+			}
 		}
 
 		.call-to-action {
@@ -318,7 +349,10 @@ h1 {
     		font-weight: 600;
     		line-height: 1;
 			margin-bottom:0;
-			color: #fff;	
+			color: #fff;
+			@media (max-width:768px){
+				font-size: 1.1rem;
+			}	
 		}
 	}
 }
@@ -372,8 +406,8 @@ h2 {
 	@media (max-width:1024px){
 		font-size:2.4rem;
 	}
-	@media(max-width:720px){
-		font-size:1.8rem;
+	@media(max-width:768px){
+		font-size:1.4rem;
 	}
 }
 
@@ -383,6 +417,9 @@ h3 {
 	line-height:1;
 	margin-bottom:20px;
 	color: var(--base-800);
+	@media (max-width:768px){
+		font-size:22px;
+	}
 }
 .mb-sm{
 	margin-bottom:3rem;
@@ -395,6 +432,9 @@ h3 {
 		border-radius:12px;
 		padding:30px;
 		display:flex;
+		@media (max-width:768px){
+			padding:10px 15px;
+		}
 		@media(max-width:1024px){
 			flex-direction:column;
 		}
@@ -405,13 +445,18 @@ h3 {
 				gap:10px;
 				margin-right:100px;
 				margin-bottom:20px;
-				@media(max-width:720px){
+				@media(max-width:768px){
 					margin-right:0px;
 				}
 				li {
 					display:inline-block;
 					padding-left:20px;
 					margin-bottom:15px;
+					@media(max-width:768px){
+						padding-left:0px;
+						padding-bottom:10px;
+						border-bottom: 1px solid var(--base-100);
+					}
 				}
 			}
 		}
@@ -429,7 +474,10 @@ h3 {
 		display:flex;
 		gap:30px;
 		margin-bottom: 20px;
-		
+		@media(max-width:768px){
+			gap:10px;
+			margin-bottom: 10px;
+		}
 		&.leaders{
 			width:50%;
 			@media(max-width:720px){
@@ -442,7 +490,7 @@ h3 {
 		article {
 			padding:30px;
 			flex:1;
-			@media(max-width:720px){
+			@media(max-width:768px){
 				padding:15px;
 			}
 			&.box-leader{
@@ -455,9 +503,17 @@ h3 {
 				margin-bottom:10px;
 				font-size: 1.4rem;
 
+				@media(max-width:768px){
+					margin-top:0px;
+					margin-bottom:0px;
+				}
+
 				&.sponsor-price {
 					padding:30px 0;
 					border-bottom:1px solid #dcdcdc;
+					@media(max-width:768px){
+						padding:10px 0;
+					}
 				}
 				.gold{
 					color: #CF8F06;	
