Update registration link, add ticket pricing details, and enhance styles for better presentation

--- a/styles.css
+++ b/styles.css
@@ -310,9 +310,22 @@ h1 {
 			}
 		}
 		p.hero-desc{
-			padding:22px 0;
+			padding: 0px 0 40px 0;
 			@media (max-width:768px){
-				padding:10px 0;
+				padding: 0px 0 30px 0;
+			}
+		}
+
+		.ticket{
+			font-size:.85rem;
+			color: #4f4f4f;
+			background-color: #f8f8f8;
+			padding:20px 10px;
+            width: fit-content;
+			border-radius:12px;	
+			margin-bottom:15px;
+			@media (max-width:768px){
+				font-size:.65rem;
 			}
 		}
 
@@ -600,6 +613,9 @@ h3 {
 		article {
 			padding:30px;
 			flex:1;
+			border: 1px solid #dcdcdc;
+			border-radius: 15px;
+
 			@media(max-width:768px){
 				padding:15px;
 			}
