Updated images for speaker profile

--- a/styles.css
+++ b/styles.css
@@ -979,7 +979,12 @@ h3 {
 	&.extrawidth{
 		max-width: 980px;
 	}
+	&.speaker-content {
+		max-width: 920px;
+	}
 }
+
+
 
 .close-modal {
     position: absolute;
@@ -1026,7 +1031,7 @@ h3 {
     width: 100%;
     margin-top: 20px;
 }
-
+/* Responsive adjustments */
 @media (max-width: 768px) {
     .modal-content {
         margin: 20% auto;
@@ -1090,5 +1095,113 @@ h3 {
     .schedule-section ul li {
         font-size: 0.9rem;
     }
+}
+
+
+/* Keynote Speakers Section */
+.keynote-speakers {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin-top: 30px;
+}
+
+.speaker-card {
+  /* flex: 1 1 calc(33.333% - 20px); */
+  flex: 1 1 calc(25% - 20px);
+  /* background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 15px; */
+  padding: 20px;
+  text-align: center;
+  position: relative;
+  /* box-shadow: 2px 2px 6px rgba(0,0,0,0.05); */
+}
+
+.speaker-image {
+    position: relative;
+  width: fit-content;
+  margin: 0 auto 15px;
+}
+.speaker-image::before {
+content: "";
+    position: absolute;
+    inset: -2px -7px 0px 23px;
+    background-color: var(--blue);
+    border-radius: 12px;
+    transform: rotate(12deg);
+    z-index: 0;
+}
+
+.speaker-image img {
+  position: relative;
+  z-index: 1;
+  width: 200px;
+  height: auto;
+  border-radius: 12px;
+  border: 2px solid var(--red);
+  background-color: white;
+}
+
+.speaker-info h4 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: var(--base-800);
+}
+
+.speaker-info p {
+  font-size: 0.95rem;
+  line-height: 1.4;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.speaker-info a {
+  font-size: 0.9rem;
+  color: var(--red);
+  font-weight: 600;
+}
+
+.speaker-img-cursor{
+	cursor: pointer;
+}
+
+@media (max-width: 992px) {
+  .speaker-card {
+    flex: 1 1 calc(50% - 20px);
+  }
+}
+
+@media (max-width: 600px) {
+  .speaker-card {
+    flex: 1 1 100%;
+  }
+}
+/* @media (min-width: 1200px) {
+  .speaker-card {
+    flex: 1 1 calc(25% - 23px);
+  }
+} */
+
+
+@media (max-width: 768px) {
+  .modal-content.speaker-content {
+    max-width: 95%;
+    padding: 30px 15px;
+  }
+
+  .close-modal {
+    font-size: 24px;
+    top: 5px;
+    right: 10px;
+  }
+}
+
+/* Ensure modal speaker images are responsive */
+.modal-content.speaker-content img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  padding-top:20px;
 }
 
